--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 *, *::before, *::after {
   box-sizing: border-box;
@@ -27,7 +28,11 @@ ul li {
 }
 
 p {
-  font-size: clamp(0.7rem, 2.2vw, 1.2rem);
+  font-size: clamp(0.8rem, 2.2vw, 1.2rem);
+}
+
+li {
+  font-size: clamp(1rem, 2.2vw, 1.8rem);
 }
 
 html {
@@ -48,35 +53,38 @@ html {
 }
 
 .fd-navbar__links {
+  z-index: 9;
   position: fixed;
-  transform: translateX(100vw);
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  transform: translateY(-100vh);
+  transition: all 0.3s ease-in-out;
+  width: 100vw;
 }
 .fd-navbar__links ul li {
-  transform: translateX(100vw);
+  transform: translateY(-100vh);
   margin-bottom: 3rem;
+  text-align: center;
   transition: all 0.3s ease-in-out;
 }
 .fd-navbar__links.active {
-  width: 100vw;
+  transform: translateY(0vh);
+  background-color: rgba(85, 84, 84, 0.97);
   height: 100vh;
-  background-color: rgba(85, 84, 84, 0.95);
-  transform: translateX(0);
-}
-
-.fd-navbar__links.active {
-  top: 0;
+  transition: all 0.3s ease-in-out;
 }
 .fd-navbar__links.active ul li {
-  transform: translateX(0);
+  transform: translateY(0vh);
+  transition: all 0.3s ease-in-out;
 }
 
 .fd-navbar__links__el {
   text-decoration: none;
   font-size: 2rem;
+  color: #fefefe;
 }
 .fd-navbar__links__el:visited, .fd-navbar__links__el:focus-within {
   color: #fefefe;
@@ -87,16 +95,17 @@ html {
 
 .fd-navbar__logo img {
   width: 150px;
-  height: auto;
-  margin-bottom: 2rem;
+  height: 150px;
+  border-radius: 50%;
 }
 
 .fd-navbar__btn {
+  z-index: 10;
   padding: 14px;
   display: flex;
-  position: absolute;
-  top: 5px;
-  right: 8px;
+  position: fixed;
+  top: 15px;
+  right: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -105,7 +114,7 @@ html {
   position: absolute;
   width: 25px;
   height: 3px;
-  background-color: #000;
+  background-color: #fefefe;
   transition: all 0.4s ease-in-out;
 }
 .fd-navbar__btn__bar:nth-child(1) {
@@ -135,8 +144,329 @@ html {
   padding: 0 2rem;
 }
 
+.fd-hero__content__li {
+  padding: 1rem 0.3rem;
+  list-style-type: "🔥";
+}
+
+.btn {
+  display: inline-block;
+  position: relative;
+  margin-block: 2rem;
+  padding: 0.4rem 2rem;
+  border-radius: 100vw;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(111.3deg, #9c27b0 9.6%, #00bcd4 93.6%);
+  text-decoration: none;
+  text-align: center;
+  color: #fefefe;
+}
+.btn:visited {
+  color: #fefefe;
+}
+.btn::after {
+  content: "";
+  position: absolute;
+  margin: 0 auto;
+  width: 80%;
+  transform: scaleX(0);
+  translate: 0 -50%;
+  height: 1px;
+  bottom: 4px;
+  left: 10%;
+  background-color: #fefefe;
+  transform-origin: bottom center;
+  transition: transform 0.25s ease-out;
+}
+.btn:hover::after, .btn:focus::after {
+  transform: scaleX(1);
+  transform-origin: bottom center;
+}
+
+.btn-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fd-projects__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fd-projects {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 80%;
+}
+.fd-projects__heading {
+  margin-bottom: 2rem;
+}
+.fd-projects__heading h1 {
+  text-align: center;
+}
+
+.fd-projects__card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.5rem;
+  margin-bottom: 2rem;
+  padding: 2rem;
+  border-radius: 50px 0px 50px 0px;
+  -moz-border-radius: 50px 0px 50px 0px;
+  -webkit-border-radius: 50px 0px 50px 0px;
+  box-shadow: 0px 0px 6px 1px #fefefe;
+}
+.fd-projects__card:hover, .fd-projects__card:focus {
+  transition: box-shadow 0.3s ease-in-out;
+  box-shadow: 0px 0px 7px 3px #cb35df;
+}
+
+.fd-projects__card__name > h2 {
+  position: relative;
+}
+.fd-projects__card__name > h2::before {
+  content: "";
+  position: absolute;
+  top: 105%;
+  width: 100%;
+  left: 0;
+  height: 5px;
+  border-radius: 2px;
+  background: linear-gradient(111.3deg, #9c27b0 9.6%, #00bcd4 93.6%);
+}
+
+.fd-projects__card__img > img {
+  max-height: 200px;
+  border-top-right-radius: 50px;
+  border-bottom-left-radius: 50px;
+}
+@media (min-width: 576px) {
+  .fd-projects__card__img > img {
+    max-height: 300px;
+  }
+}
+@media (min-width: 992px) {
+  .fd-projects__card__img > img {
+    max-height: 400px;
+  }
+}
+
+.show {
+  opacity: 1;
+  transform: translate(0, 0);
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.hide {
+  opacity: 0;
+  transform: translateY(10rem);
+}
+
+.show-left {
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: transform 1s ease-in-out;
+}
+
+.show-right {
+  opacity: 0;
+  transform: translateX(100%);
+  transition: transform 1s ease-in-out;
+}
+
+.fd-skills {
+  padding: 0 2rem;
+}
+
+.fd-skills__heading > h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.fd-skills__list ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.fd-skills__list__bar {
+  position: relative;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  height: 10px;
+  padding: 1rem 0;
+  border: 1px solid #000;
+  border-radius: 100vw;
+  overflow: hidden;
+  background-color: #414244;
+}
+.fd-skills__list__bar > div {
+  background: linear-gradient(111.3deg, #9c27b0 9.6%, #00bcd4 93.6%);
+  padding: 1rem;
+}
+.fd-skills__list__bar span {
+  position: absolute;
+  right: 50%;
+  transform: translateX(50%);
+}
+
+div[data-percent="10"] {
+  width: 10%;
+}
+
+div[data-percent="20"] {
+  width: 20%;
+}
+
+div[data-percent="30"] {
+  width: 30%;
+}
+
+div[data-percent="40"] {
+  width: 40%;
+}
+
+div[data-percent="50"] {
+  width: 50%;
+}
+
+div[data-percent="60"] {
+  width: 60%;
+}
+
+div[data-percent="70"] {
+  width: 70%;
+}
+
+div[data-percent="80"] {
+  width: 80%;
+}
+
+div[data-percent="90"] {
+  width: 90%;
+}
+
+div[data-percent="100"] {
+  width: 100%;
+}
+
+@media (min-width: 992px) {
+  .fd-skills__list__bar {
+    padding-block: 1.5rem;
+  }
+  .fd-skills__list__bar > div {
+    padding-block: 1.5rem;
+  }
+}
+
+.fd-tel::before {
+  content: "";
+  background: url("../images/tel.svg") no-repeat;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  padding: 1rem;
+  left: -28px;
+  display: flex;
+}
+
+.fd-mail::before {
+  content: "";
+  background: url("../images/mail.svg") no-repeat;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  padding: 1rem;
+  left: -28px;
+  display: flex;
+}
+
+.fd-li::before {
+  content: "";
+  background: url("../images/li.svg") no-repeat;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  padding: 1rem;
+  left: -28px;
+  display: flex;
+}
+
+.fd-fb::before {
+  content: "";
+  background: url("../images/fb.svg") no-repeat;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  padding: 1rem;
+  left: -28px;
+  display: flex;
+}
+
+.fd-ig::before {
+  content: "";
+  background: url("../images/ig.svg") no-repeat;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  padding: 1rem;
+  left: -28px;
+  display: flex;
+}
+
+.fd-gh::before {
+  content: "";
+  background: url("../images/gh.svg") no-repeat;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  padding: 1rem;
+  left: -28px;
+  display: flex;
+}
+
+.fd-contact {
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.fd-contact .fd-contact__header {
+  margin-bottom: 1rem;
+}
+.fd-contact .fd-contact__body {
+  display: flex;
+  flex-direction: column;
+}
+
+.fd-contact__body__icons {
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  position: relative;
+}
+
 #root,
 body {
-  background-color: #225eb2;
+  background-color: #414244;
   height: 100vh;
+}
+
+.fd-section {
+  margin: 2rem 2rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.fd-section--wider {
+  margin: 2rem 1rem;
 }/*# sourceMappingURL=style.css.map */
