--- a/src/scss/_socialMedia.scss
+++ b/src/scss/_socialMedia.scss
@@ -3,9 +3,9 @@
   background: url("../images/tel.svg") no-repeat;
   width: 16px;
   height: 16px;
-  position: absolute;
+  position: relative;
   padding: 1rem;
-  left: -28px;
+  left: -5px;
   display: flex;
 }
 .fd-mail::before {
@@ -13,9 +13,9 @@
   background: url("../images/mail.svg") no-repeat;
   width: 16px;
   height: 16px;
-  position: absolute;
+  position: relative;
   padding: 1rem;
-  left: -28px;
+  left: -5px;
   display: flex;
 }
 .fd-li::before {
@@ -23,9 +23,9 @@
   background: url("../images/li.svg") no-repeat;
   width: 16px;
   height: 16px;
-  position: absolute;
+  position: relative;
   padding: 1rem;
-  left: -28px;
+  left: -5px;
   display: flex;
 }
 .fd-fb::before {
@@ -33,9 +33,9 @@
   background: url("../images/fb.svg") no-repeat;
   width: 16px;
   height: 16px;
-  position: absolute;
+  position: relative;
   padding: 1rem;
-  left: -28px;
+  left: -5px;
   display: flex;
 }
 .fd-ig::before {
@@ -43,9 +43,9 @@
   background: url("../images/ig.svg") no-repeat;
   width: 16px;
   height: 16px;
-  position: absolute;
+  position: relative;
   padding: 1rem;
-  left: -28px;
+  left: -5px;
   display: flex;
 }
 .fd-gh::before {
@@ -53,8 +53,8 @@
   background: url("../images/gh.svg") no-repeat;
   width: 16px;
   height: 16px;
-  position: absolute;
+  position: relative;
   padding: 1rem;
-  left: -28px;
+  left: -5px;
   display: flex;
 }
