--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,3 +1,5 @@
+@use "../scss/responsiveLayoutSetting" as *;
+
 .fd-contact {
   margin-bottom: 2rem;
   display: flex;
@@ -12,9 +14,36 @@
   }
 }
 .fd-contact__body__icons {
-  gap: 1rem;
   display: flex;
-  flex-direction: column;
   margin-bottom: 1rem;
   position: relative;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  a {
+    display: flex;
+    position: relative;
+    margin-bottom: 1rem;
+    margin: 1rem 2rem;
+  }
+}
+
+@include bigger-than(sm) {
+  .fd-contact__body__icons {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    a {
+      display: flex;
+      flex-basis: 30%;
+      justify-content: center;
+    }
+  }
+}
+
+@include bigger-than(lg) {
+  .fd-contact__body__icons a {
+    flex-basis: 20%;
+  }
 }
