--- a/src/scss/_responsiveLayoutSetting.scss
+++ b/src/scss/_responsiveLayoutSetting.scss
@@ -1,8 +1,8 @@
 $breakpoints: (
-  "xs": 576px,
-  "sm": 767px,
-  "md": 992px,
-  "lg": 1200px,
+  "sm": 576px,
+  "md": 767px,
+  "lg": 992px,
+  "xl": 1200px,
 ) !default;
 
 @mixin bigger-than($breakpoint) {
