adding text resposivity and some resizing

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -75,6 +75,7 @@ $btn-light: #fefefe;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
   &__bar {
     position: absolute;
     width: 25px;
