--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -26,6 +26,9 @@
     position: relative;
     margin-bottom: 1rem;
     margin: 1rem 2rem;
+    &:visited {
+      color: rgb(158, 158, 255);
+    }
   }
 }
 
