--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -27,6 +27,7 @@
     margin-bottom: 1rem;
     margin: 1rem 2rem;
     transition: color 0.3s ease-in-out;
+    color: rgb(158, 158, 255);
     &:visited {
       color: rgb(158, 158, 255);
     }
