--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -1,12 +1,19 @@
-.fd-hero{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    padding: 0 2rem;
+@use "./responsiveLayoutSetting" as *;
+
+.fd-hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 0 2rem;
 }
-.fd-hero__content__li{
-    padding: 1rem .3rem;
-    list-style-type:"🔥";
+.fd-hero__content__li {
+  padding: 1rem 0.3rem;
+  list-style-type: "🔥";
+}
+
+.heading {
+  padding: 1rem 0;
+  font-size: clamp(1.6rem, 2.5vw, 2rem);
 }
